--- a/.github/workflows/Build_ARMv8.yml
+++ b/.github/workflows/Build_ARMv8.yml
@@ -91,8 +91,8 @@ jobs:
         echo "commit=$Commit" >> $GITHUB_ENV
         echo "hash=$Hash" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
-        echo "DATE1=$(date "+%Y-%m-%d")" >> $GITHUB_ENV
-    
+        echo "start=$(date +%s)" >> $GITHUB_ENV
+        
     - name: Load custom feeds
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
@@ -217,7 +217,18 @@ jobs:
           升级 OpenWrt：系统 → 晶晨宝盒 → 手动上传更新 或者 在线下载更新
           当前使用版本:【编译前的最后一次➦[主源码](https://github.com/coolsnowwolf/lede)更新记录】
           ${{ env.useVersionInfo }}
-          
+    
+    - name: Total time
+      run: |
+         echo "DATE1=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
+         end=$(date +%s)
+         seconds=$(( end - start ))
+         hour=$(( $seconds/3600 ))
+         min=$(( ($seconds-${hour}*3600)/60 ))
+         sec=$(( $seconds-${hour}*3600-${min}*60 ))
+         HMS=`echo ${hour}:${min}:${sec}`
+         echo "time=$HMS" >> $GITHUB_ENV
+         
     - name: Telegram notification
       uses: appleboy/telegram-action@master
       with:
@@ -225,7 +236,9 @@ jobs:
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
           🌺${{ env.PRODUCT_NAME }}编译完成
-          编译时间：${{ env.DATE }}
+          开始时间：${{ env.DATE }}
+          完成时间：${{ env.DATE1 }}
+          编译耗时：${{ env.time }}
           更新信息：
           作者: ${{ env.author }}
           时间: ${{ env.date }}
