--- a/armv8/.config
+++ b/armv8/.config
@@ -3318,7 +3318,7 @@ CONFIG_PACKAGE_python3-codecs=y
 # CONFIG_PACKAGE_python3-contextlib2 is not set
 # CONFIG_PACKAGE_python3-cryptodome is not set
 # CONFIG_PACKAGE_python3-cryptodomex is not set
-# CONFIG_PACKAGE_python3-cryptography is not set
+CONFIG_PACKAGE_python3-cryptography=y
 # CONFIG_PACKAGE_python3-cryptography-src is not set
 CONFIG_PACKAGE_python3-ctypes=y
 # CONFIG_PACKAGE_python3-ctypes-src is not set
