--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build X86_64_515 OpenWrt
+name: Build X86_64 OpenWrt
 
 on:
   repository_dispatch:
@@ -31,8 +31,8 @@ env:
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
   TZ: Asia/Shanghai
-  FILE_NAME: X86_64_515
-  PRODUCT_NAME: x86_64_515
+  FILE_NAME: X86_64
+  PRODUCT_NAME: x86_64
   CONFIG: X86
 
 jobs:
