--- a/.github/workflows/Build_X86_64_515.yml
+++ b/.github/workflows/Build_X86_64_515.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build X86_64 OpenWrt
+name: Build X86_64_515 OpenWrt
 
 on:
   repository_dispatch:
@@ -25,14 +25,14 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: x86/feeds.conf.default
-  CONFIG_FILE: x86/.config
+  CONFIG_FILE: x86/515.config
   DIY_P1_SH: x86/diy-part1.sh
   DIY_P2_SH: x86/diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
   TZ: Asia/Shanghai
-  FILE_NAME: X86_64
-  PRODUCT_NAME: x86_64
+  FILE_NAME: X86_64_515
+  PRODUCT_NAME: x86_64_515
   CONFIG: X86
 
 jobs:
