--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build X86_64_515 OpenWrt
+name: Build X86_64 OpenWrt
 
 on:
   repository_dispatch:
@@ -31,8 +31,8 @@ env:
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
   TZ: Asia/Shanghai
-  FILE_NAME: X86_64_515
-  PRODUCT_NAME: x86_64_515
+  FILE_NAME: X86_64
+  PRODUCT_NAME: x86_64
   CONFIG: X86
 
 jobs:
@@ -113,7 +113,7 @@ jobs:
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x $DIY_P2_SH
         cd openwrt
-        sed -i 's/KERNEL_PATCHVER:=*.*/KERNEL_PATCHVER:=5.15/g' ./target/linux/x86/Makefile
+        sed -i 's/KERNEL_PATCHVER:=*.*/KERNEL_PATCHVER:=5.15/g' target/linux/x86/Makefile
         $GITHUB_WORKSPACE/$DIY_P2_SH
         
     - name: SSH connection to Actions
