--- a/.github/workflows/x86main.yml
+++ b/.github/workflows/x86main.yml
@@ -26,8 +26,8 @@ env:
   REPO_BRANCH: master
   FEEDS_CONF: x86/feeds.conf.default
   CONFIG_FILE: x86/X86.config
-  DIY_P1_SH: x86/diy-part1.sh
-  DIY_P2_SH: x86/diy-part2.sh
+  DIY_P1_SH: x86/diy1.sh
+  DIY_P2_SH: x86/diy2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
   TZ: Asia/Shanghai
