--- a/.github/workflows/X86-config.yml
+++ b/.github/workflows/X86-config.yml
@@ -16,8 +16,8 @@ env:
   REPO_BRANCH: master
   FEEDS_CONF: x86/feeds.conf.default
   CONFIG_FILE: x86/12.config
-  DIY_P1_SH: x86/diy-part1.sh
-  DIY_P2_SH: x86/diy-part2.sh
+  DIY_P1_SH: x86/diy1.sh
+  DIY_P2_SH: x86/diy2.sh
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: false
   CONFIG: X86
