--- a/.github/workflows/x86main.yml
+++ b/.github/workflows/x86main.yml
@@ -25,7 +25,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: x86/feeds.conf.default
-  CONFIG_FILE: x86/.config
+  CONFIG_FILE: x86/1.config
   DIY_P1_SH: x86/diy1.sh
   DIY_P2_SH: x86/diy2.sh
   UPLOAD_BIN_DIR: false
