--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -252,18 +252,18 @@ jobs:
          HMS=`echo ${hour}:${min}:${sec}`
          echo "time=$HMS" >> $GITHUB_ENV
         
-    - name: Telegram notification
-      uses: appleboy/telegram-action@master
-      with:
-        to: ${{ secrets.TELEGRAM_TO }}
-        token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: |
-          ♨️${{ env.PRODUCT_NAME }}编译完成
-          开始时间：${{ env.DATE }}
-          完成时间：${{ env.DATE1 }}
-          编译耗时：${{ env.time }}
-          更新信息：
-          作者: ${{ env.author }}
-          时间: ${{ env.date }}
-          内容: ${{ env.commit }}
-          hash: ${{ env.hash }}
+    #- name: Telegram notification
+     # uses: appleboy/telegram-action@master
+     # with:
+     #   to: ${{ secrets.TELEGRAM_TO }}
+      #  token: ${{ secrets.TELEGRAM_TOKEN }}
+     #   message: |
+      #    ♨️${{ env.PRODUCT_NAME }}编译完成
+      #    开始时间：${{ env.DATE }}
+     #     完成时间：${{ env.DATE1 }}
+      #    编译耗时：${{ env.time }}
+      #    更新信息：
+       #   作者: ${{ env.author }}
+      #    时间: ${{ env.date }}
+      #    内容: ${{ env.commit }}
+      #    hash: ${{ env.hash }}
