--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -24,6 +24,10 @@ on:
           - openwrt-18.06
           - openwrt-21.02
           - openwrt-22.03
+      config:
+        description: "config connection to Actions"
+        required: false
+        default: "x86/.config"  
       ssh:
          description: 'SSH connection to Actions'
          required: false
@@ -35,7 +39,7 @@ env:
   REPO_URL: ${{ github.event.inputs.url }}
   REPO_BRANCH: ${{ github.event.inputs.branch }}
   FEEDS_CONF: x86/feeds.conf.default
-  CONFIG_FILE: x86/.config
+  CONFIG_FILE: ${{ github.event.inputs.config }}
   DIY_P1_SH: x86/diy1.sh
   DIY_P2_SH: x86/diy2.sh
   UPLOAD_BIN_DIR: false
