--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -51,11 +51,11 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v2
 
     - name: Check server configuration
       run: |
@@ -76,27 +76,44 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo timedatectl set-timezone "Asia/Shanghai" 
-        sudo -E swapoff -a
-        sudo -E rm -f /swapfile
-        sudo -E docker image prune -a -f
-        sudo -E snap set system refresh.retain=2
-        sudo -E apt-get -y purge azure* dotnet* firefox ghc* google* hhvm llvm* mono* mysql* openjdk* php* zulu*
-        sudo -E apt-get -y autoremove --purge
-        sudo -E rm -rf /usr/share/dotnet /usr/local/lib/android/sdk /etc/mysql /etc/php /usr/local/share/boost
-        [ -n "$AGENT_TOOLSDIRECTORY" ] && sudo rm -rf "$AGENT_TOOLSDIRECTORY"
-        sudo -E apt-get update -y
-        sudo -E apt-get install -y build-essential rsync asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core p7zip p7zip-full msmtp libssl-dev texinfo libreadline-dev libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint ccache curl wget vim nano python3 python3-pip python3-ply haveged lrzsz device-tree-compiler scons
-        wget -qO - https://raw.githubusercontent.com/friendlyarm/build-env-on-ubuntu-bionic/master/install.sh | sed 's/python-/python3-/g' | /bin/bash
-        pip install aligo
+        set +e
+        echo "***************************************"
+        echo "Deleting docker images, please wait ..."
+        echo "***************************************"
+        docker rmi `docker images -q`
+        echo "***************************************"
+        echo "Deleting unuse package, please wait ..."
+        echo "***************************************"
+        sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android
+        sudo -E apt-get -qqy purge \
+          azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell \
+          openjdk* mysql* php* mongodb* dotnet* moby* snapd*
+        echo "***************************************"
+        echo "Install required package, please wait ..."
+        echo "***************************************"
+        sudo -E apt-get update -qqy
+        sudo -E apt-get upgrade -qqy
+        sudo -E apt-get install -qqy \
+          ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
+          bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib \
+          git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libglib2.0-dev libgmp3-dev libltdl-dev \
+          libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool lrzsz \
+          mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pip qemu-utils \
+          rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
+        echo "***************************************"
+        echo "Autoremove and clean, please wait ..."
+        echo "***************************************"
+        sudo -E apt-get -qqy autoremove --purge
         sudo -E apt-get clean
         df -hT
         
     - name: Clone source code
       run: |
-        df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         
-        cd openwrt
+    - name: data time
+      working-directory: ./openwrt
+      run: |  
         useVersionInfo=$(git show -s --date=short --format="Author: %an<br/>date: %cd<br/>commit: %s<br/>commit hash: %H")
         Author=$(git show -s --date=short --format="Author: %an")
         Date=$(git show -s --date=short --format="date: %cd")
@@ -109,7 +126,7 @@ jobs:
         echo "hash=$Hash" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "start=$(date +%s)" >> $GITHUB_ENV
-         
+
     - name: Load custom feeds
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
@@ -118,8 +135,8 @@ jobs:
         $GITHUB_WORKSPACE/$DIY_P1_SH
         
     - name: Update & Install feeds
+      working-directory: ./openwrt
       run: |
-          cd openwrt 
           ./scripts/feeds update -a 
           
           ./scripts/feeds install -a -f
@@ -153,17 +170,17 @@ jobs:
           * 修改后的config文件 📝
      
     - name: Download package
+      working-directory: ./openwrt
       id: package
       run: |
-        cd openwrt
         make download -j$(nproc)
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
         
     - name: Compile the firmware
+      working-directory: ./openwrt
       id: compile
       run: |
-        cd openwrt
         echo -e ">>>> $(nproc) thread compile ..."
         make -j$(nproc) || make -j1 V=s
         echo "::set-output name=status::success"
@@ -183,8 +200,8 @@ jobs:
         path: openwrt/bin
         
     - name: delete files
+      working-directory: ./openwrt
       run: |
-        cd openwrt
         rm -rf  bin/targets/x86/64/config.buildinfo
         rm -rf  bin/targets/x86/64/feeds.buildinfo
         rm -rf  bin/targets/x86/64/openwrt-x86-64-generic-kernel.bin
