--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -168,7 +168,36 @@ jobs:
         token: ${{ secrets.GH_TOKEN }}
         body: |
           * 修改后的config文件 📝
-     
+
+      - name: 输出编译信息
+        run: |
+          cd openwrt
+          echo " 系统空间      类型   总数  已用  可用 使用率"
+          df -hT $PWD
+          echo
+          echo "=========================================="
+          grep -i CONFIG_PACKAGE_luci-app .config | grep  -v \# > Plug-in
+          grep -i CONFIG_PACKAGE_luci-theme .config | grep  -v \# >> Plug-in
+          sed -i '/INCLUDE/d' Plug-in > /dev/null 2>&1
+          sed -i 's/CONFIG_PACKAGE_/、/g' Plug-in
+          sed -i '/Transparent_Proxy/d' Plug-in > /dev/null 2>&1
+          sed -i 's/=y/\ /g' Plug-in
+          awk '$0=NR$0' Plug-in > Plug-2
+          awk '{print "	" $0}' Plug-2 > Plug-in    
+          echo
+          echo
+          echo "	      已选插件列表"
+          cat Plug-in
+          rm -rf {Plug-in,Plug-2}  
+          echo
+          echo "=========================================="
+          echo
+          echo
+          echo "输出完整插件信息..."
+          echo
+          echo
+          cat .config
+
     - name: Download package
       working-directory: ./openwrt
       id: package
@@ -190,7 +219,16 @@ jobs:
         
     - name: Check space usage
       if: (!cancelled())
-      run: df -hT
+      run: |
+        echo "=========================================="
+        echo "----------------空间使用-------------------"
+        echo "=========================================="
+        echo " 系统空间      类型   总数  已用  可用 使用率"
+        df -hT
+        echo "=========================================="
+        du -h --max-depth=1 openwrt/ --exclude=build_dir --exclude=bin
+        du -h --max-depth=1 openwrt/build_dir
+        du -h --max-depth=1 openwrt/bin
 
     - name: Upload bin directory
       uses: actions/upload-artifact@main
