--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -69,51 +69,32 @@ jobs:
         echo "-----------------------------硬盘信息---------------------------------------------"
         echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l) \n"
         echo "硬盘详情："
+        echo " 系统空间      类型   总数  已用  可用 使用率"
         df -Th
         
     - name: Initialization environment
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        sudo timedatectl set-timezone "Asia/Shanghai" 
-        set +e
-        echo "***************************************"
-        echo "Deleting docker images, please wait ..."
-        echo "***************************************"
-        docker rmi `docker images -q`
-        echo "***************************************"
-        echo "Deleting unuse package, please wait ..."
-        echo "***************************************"
-        sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android
-        sudo -E apt-get -qqy purge \
-          azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell \
-          openjdk* mysql* php* mongodb* dotnet* moby* snapd*
-        echo "***************************************"
-        echo "Install required package, please wait ..."
-        echo "***************************************"
-        sudo -E apt-get update -qqy
-        sudo -E apt-get upgrade -qqy
-        sudo -E apt-get install -qqy \
-          ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
-          bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib \
-          git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libglib2.0-dev libgmp3-dev libltdl-dev \
-          libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool lrzsz \
-          mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pip qemu-utils \
-          rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
-        echo "***************************************"
-        echo "Autoremove and clean, please wait ..."
-        echo "***************************************"
-        sudo -E apt-get -qqy autoremove --purge
-        sudo -E apt-get clean
-        df -hT
+          docker rmi `docker images -q`
+          sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android
+          sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* adoptopenjdk* mysql* php* mongodb* dotnet* moby* snapd* || true
+          sudo -E apt-get update
+          sudo -E apt-get -y install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool lrzsz mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pip qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
+          sudo -E apt-get -y autoremove --purge
+          sudo -E apt-get clean
+          sudo timedatectl set-timezone "$TZ"
+          sudo mkdir -p /workdir
+          sudo chown $USER:$GROUPS /workdir
         
     - name: Clone source code
+      working-directory: /workdir
       run: |
+        echo " 系统空间      类型   总数  已用  可用 使用率"
+        df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
-        
-    - name: data time
-      working-directory: ./openwrt
-      run: |  
+        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+        cd openwrt
         useVersionInfo=$(git show -s --date=short --format="Author: %an<br/>date: %cd<br/>commit: %s<br/>commit hash: %H")
         Author=$(git show -s --date=short --format="Author: %an")
         Date=$(git show -s --date=short --format="date: %cd")
@@ -124,6 +105,11 @@ jobs:
         echo "date=$Date" >> $GITHUB_ENV
         echo "commit=$Commit" >> $GITHUB_ENV
         echo "hash=$Hash" >> $GITHUB_ENV
+        cd ..
+        
+    - name: data time
+      run: |  
+        echo "编译开始时间..."
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "start=$(date +%s)" >> $GITHUB_ENV
 
@@ -312,6 +298,7 @@ jobs:
      
     - name: Total time
       run: |
+         echo "编译完成时间..."
          echo "DATE1=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
          end=$(date +%s)
          seconds=$(( end - start ))
@@ -334,4 +321,4 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
         "
-        curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_TO }}&text=${MSG}"
+        curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_TO }}&text=${MSG}" >/dev/null 2>&1 && echo "ok..."
