--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -113,7 +113,7 @@ jobs:
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "start=$(date +%s)" >> $GITHUB_ENV
 
-    - name: Load custom feeds 自定义配置
+    - name: Load custom feeds 自定义DIY1配置
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         chmod +x $DIY_P1_SH
@@ -127,7 +127,7 @@ jobs:
           
           ./scripts/feeds install -a -f
           
-    - name: Load custom feeds 自定义配置
+    - name: Custom configuration 自定义DIY2配置
       run: |  
           chmod +x $DIY_P2_SH
           cd openwrt
