--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -94,12 +94,11 @@ jobs:
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
-        cd openwrt
-        useVersionInfo=$(git show -s --date=short --format="Author: %an<br/>date: %cd<br/>commit: %s<br/>commit hash: %H")
-        Author=$(git show -s --date=short --format=" %an ")
-        Date=$(git show -s --date=short --format=" %cd ")
-        Commit=$(git show -s --date=short --format=" %s ")
-        Hash=$(git show -s --date=short --format=" %h ")
+        cd openwrt 
+        Author=$(git show -s --date=short --format="%an")
+        Date=$(git show -s --date=short --format="%ci")
+        Commit=$(git show -s --date=short --format="%s")
+        Hash=$(git show -s --date=short --format="%H")
         echo "useVersionInfo=$useVersionInfo" >> $GITHUB_ENV
         echo "author=$Author" >> $GITHUB_ENV
         echo "date=$Date" >> $GITHUB_ENV
@@ -286,7 +285,7 @@ jobs:
       id: release
       uses: ncipollo/release-action@v1
       with:
-        name: R${{ env.DATE }} for ${{ env.PRODUCT_NAME }}
+        name: ${{ env.DATE }} 「 ${{ env.PRODUCT_NAME }} 」固件
         allowUpdates: true
         removeArtifacts: true
         artifacts: ${{ env.FIRMWARE }}/*
@@ -298,7 +297,14 @@ jobs:
           - 🔥默认IP：192.168.8.3 默认密码：password
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           ★  感谢源码作者无私分享！
-          ${{ env.useVersionInfo }}
+          🎈 更新信息：
+          🎈 作者: ${{ env.author }}
+          
+          🎈 时间: ${{ env.date }}
+          
+          🎈 内容: ${{ env.commit }}
+          
+          🎈 hash: ${{ env.hash }}
      
     - name: Completion time 编译完成时间
       if: steps.organizer.outputs.status == 'success' 
