--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -90,7 +90,7 @@ jobs:
       run: |
         echo " 系统空间       类型  总数  已用  可用 使用率"
         df -hT $PWD
-        git clone $REPO_URL -b $REPO_BRANCH openwrt
+        git clone -b $REPO_BRANCH --single-branch $REPO_URL openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
         cd openwrt 
         Author=$(git show -s --date=short --format="%an")
