--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -122,7 +122,7 @@ jobs:
       run: |
           ./scripts/feeds update -a 
           
-          ./scripts/feeds install -a -f
+          ./scripts/feeds install -a
           
     - name: Custom configuration 自定义DIY2配置
       run: |  
