--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -111,19 +111,22 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
         
-    - name: Update & Install feeds 更新并安装配置中的源
+    - name: Update feeds 更新源
       working-directory: ./openwrt
       run: |
           ./scripts/feeds update -a 
-          
-          ./scripts/feeds install -a
-          
+       
     - name: Custom configuration 自定义DIY2配置
       run: |  
           chmod +x $DIY_P2_SH
           cd openwrt
           $GITHUB_WORKSPACE/$DIY_P2_SH
           sed -i "s/KERNEL_PATCHVER:=*.*/KERNEL_PATCHVER:=5.15/g" target/linux/x86/Makefile
+    
+    - name: Install feeds 安装源
+      working-directory: ./openwrt
+      run: |
+          ./scripts/feeds install -a
           
     - name: Load custom configuration 加载config配置
       run: |
