--- a/.github/workflows/Build_OP_x86_515_lite.yml
+++ b/.github/workflows/Build_OP_x86_515_lite.yml
@@ -79,7 +79,7 @@ jobs:
     - name: Build firmware
       working-directory: ./openwrt
       run: |
-        make -j$(nproc)
+        make -j$(nproc) V=s
 
     - name: Assemble Artifact
       id: assemble_artifact
@@ -126,7 +126,7 @@ jobs:
         artifacts: X86_Out/*.img.gz 
         name: ${{ steps.generate_name.outputs.release_name }}
         tag: ${{ steps.generate_name.outputs.release_tag }}
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GH_TOKEN }}
                          
     - name: Upload Aliyun
       run: |  
