--- a/.github/workflows/Build_OP_x86_515_lite.yml
+++ b/.github/workflows/Build_OP_x86_515_lite.yml
@@ -47,7 +47,7 @@ jobs:
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
-        cp -f ../X86/diy1.sh ./
+        cp -f ../x86/diy1.sh ./
         chmod +x ./diy1.sh && ./diy1.sh
 
     - name: Update & Install feeds
