--- a/.github/workflows/Build_OP_x86_515_lite.yml
+++ b/.github/workflows/Build_OP_x86_515_lite.yml
@@ -79,7 +79,7 @@ jobs:
     - name: Build firmware
       working-directory: ./openwrt
       run: |
-        make -j$(nproc) V=s
+        make -j$(nproc)
 
     - name: Assemble Artifact
       id: assemble_artifact
